--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".auth.PhoneAuth"></activity>
+        <activity
+            android:name=".MyDashboard"
+            android:label="@string/title_activity_my_dashboard"></activity>
+        <activity android:name=".auth.PhoneAuth" />
         <activity android:name=".auth.LoginScreen" />
         <activity android:name=".WelcomeScreen">
             <intent-filter>
