--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,8 @@ dependencies {
     //OTP Text View
     implementation 'com.github.aabhasr1:OtpView:v1.1.2'
 
+    //
+    implementation 'com.amitshekhar.android:jackson-android-networking:1.0.2'
+
 
 }
